--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsc -b && node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
+    "@types/express": "^5.0.6",
+    "express": "^5.2.1",
+    "inngest": "^3.49.3",
     "typescript": "^5.9.3"
   }
 }
