--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
     "inngest": "^3.49.3",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "winston": "^3.19.0"
   }
 }
