--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "type": "module",
   "dependencies": {
     "@types/express": "^5.0.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "inngest": "^3.49.3",
     "typescript": "^5.9.3",
