--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "inngest": "^3.49.3",
+    "mongoose": "^9.1.4",
     "typescript": "^5.9.3",
     "winston": "^3.19.0"
   }
