--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,10 +13,12 @@
   "dependencies": {
     "@types/bcrypt": "^6.0.0",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "inngest": "^3.49.3",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.4",
     "typescript": "^5.9.3",
     "winston": "^3.19.0",
