--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,6 +15,7 @@
     "@types/cookie-parser": "^1.4.10",
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
@@ -24,6 +25,7 @@
     "mongoose": "^9.1.4",
     "openai": "^6.17.0",
     "typescript": "^5.9.3",
+    "uuid": "^13.0.0",
     "winston": "^3.19.0",
     "zod": "^4.3.5"
   }
