--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-slider": "^1.3.6",
     "axios": "^1.13.5",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.4",
     "framer-motion": "^12.33.0",
     "gsap": "^3.14.2",
